fixed title sizes on tablet version

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -38,6 +38,12 @@ img {
     }
 }
 
+@media (min-width: 768px) {
+    .section-title {
+        font-size: 28px;
+    }
+}
+
 @media (min-width: 1200px) {
     .section-title {
         font-size: 28px;
